# ar_course

./: .gitignore  FistAndFurious.pro  LICENSE  README.md  json.md  json_doc.md
3d_courses/3d_courses_test/: 3d_courses_test.pro  main.cpp  mainwindow.h  orbittransformcontroller.h
AnalysisOCV/: main.cpp  test.pro
AnalysisOCV/ar_code_scanner/: Checkpoint.cpp  Field.cpp  Field.h  FieldAruco.h  MqttService.cpp  Obstacle.cpp  Obstacle.h  ar_code_scanner.pro  caruco.cpp  caruco.h  cmqtt.cpp  cmqtt.h  main.cpp
BattonDeJoie/: BattonDeJoie.ino  BattonDeJoie.ino.ino
Client/: Client.pro  Interface.pro  Interface.pro.user.a99322c  Player.cpp  Player.h  field.cpp  field.h  interface.cpp  interface.h  interface.ui.autosave  main.cpp
Client/2DGraphics/: BombGraphics.h  (+16 more)
Client3D/: Client3D.pro  bananaGraphics3D.cpp  bananaGraphics3D.h  checkpointgraphics.cpp  interface.cpp  interface.h  interface.ui  main.cpp  obstaclegraphics.cpp  playergraphics.cpp  roadgraphics3d.cpp  roadgraphics3d.h  vehicule.qrc  widget.cpp  widget.h
Client3DPlayer/: Client3DPlayer.pro  client3dplayer.cpp  client3dplayer.h  main.cpp
Engine/: EndGame.cpp  EndGame.h  EndGame.ui  EndGameDialog.cpp  EndGameDialog.h  EndGameDialog.ui  Engine.cpp  Engine.h  Engine.pro  GBanana.cpp  GBanana.h  GCheckpoint.cpp  GCheckpoint.h  GEngine.cpp  GEngine.h  GObstacle.cpp  GObstacle.h  GPlayer.cpp  GPlayer.h  PI2023.pro.user.8a59123  PlayerScoreItem.cpp  PlayerScoreItem.h  main.cpp  mqttservice.cpp  window.cpp  window.h  window.ui
ExchangeLib/: CMakeLists.txt  ExchangeLib.pro  Map.cpp  Map.h
ExchangeLib/Kart/Game/: Control.cpp  Control.h  Properties.cpp  Properties.h  Vehicle.cpp  Vehicle.h
ExchangeLib/Kart/Map/: Checkpoint.cpp  Checkpoint.h  Map.cpp  Map.h  Obstacle.cpp  Obstacle.h
ExchangeLib/Kart/Player/: GameMode.cpp  GameMode.h  Item.cpp  Item.h  Player.cpp  Player.h  Register.cpp  Register.h  RegisterManager.cpp  RegisterManager.h
ExchangeLib/Mqtt/: MqttService.cpp  MqttService.h
IA/: IA.cpp  IA.h  IA.pro  main.cpp  window.cpp  window.h  window.ui
Maps/: .gitignore  AnalysisOCV  FieldAruco.cpp  FieldAruco.h  MapAruco.cpp  MapAruco.h  Maps.pro  MqttService.cpp  MqttService.h  main.cpp
PI2023/: PI2023.pro  checkpoint.cpp  checkpoint.h  cplayer.h  map.cpp  map.h  mqttservice.cpp  mqttservice.h
Player/: Controller.cpp  Controller.h  MqttService.cpp  MqttService.h  PartieJoueur.pro  Player.pro  Properties.cpp  Properties.h  Vehicle.cpp  Vehicle.h  main.cpp  playerui.cpp  playerui.h  properties.cpp  properties.h  vehicle.cpp
Tools/: .gitignore
Tools/MqttExchanger/: .gitignore  CMakeLists.txt  MqttExchanger.pro
Tools/MqttExchanger/src/: main.cpp  window.cpp  window.h  window.ui
Tools/MqttExchanger/src/Kart/Game/: Properties.cpp  Properties.h  Vehicle.cpp  Vehicle.h
Tools/MqttExchanger/src/Kart/Map/: Checkpoint.cpp  Checkpoint.h  Field.cpp  Field.h  Obstacle.cpp  Obstacle.h
Tools/MqttExchanger/src/Kart/Player/: GameMode.cpp  GameMode.h  Item.cpp  Item.h  Player.cpp  Player.h
Tools/MqttExchanger/src/Mqtt/: MqttService.cpp  MqttService.h
broker/: docker-compose.yml  fakeProperties.bash  faker.py  game.bash  map.bash  map10.bash  map12.bash  map2.bash  map3.bash  map4.bash  map5.bash  map6.bash  map7.bash  map8.bash  map9.bash
images/: AR.MOV
(+73 files in other folders)
